--- a/case_study.Rmd
+++ b/case_study.Rmd
@@ -93,7 +93,7 @@ nyc_airbnb |>
 nyc_airbnb |> 
   filter(
     price < 1000, 
-    room_type == "Entire room/apt", 
+    room_type == "Entire home/apt", 
     borough == "Manhattan") |> 
   group_by(neighbourhood) |> 
   summarize(
@@ -107,7 +107,7 @@ nyc_airbnb |>
 nyc_airbnb |> 
   filter(
     price < 1000, 
-    room_type == "Entire room/apt", 
+    room_type == "Entire home/apt", 
     borough == "Manhattan") |> 
   mutate(neighbourhood = fct_reorder(neighbourhood, price)) |> 
   ggplot(aes(x = price, y = neighbourhood)) +
@@ -119,9 +119,23 @@ nyc_airbnb |>
 nyc_airbnb |> 
   filter(
     price < 1000, 
-    room_type == "Entire room/apt", 
+    room_type == "Entire home/apt", 
     borough == "Manhattan") |>
   ggplot(aes(x = lat, y = long, color = price)) +
   geom_point()
+```
+
+```{r}
+library(leaflet)
+
+nyc_airbnb |> 
+  filter(
+    price < 1000, 
+    room_type == "Entire home/apt", 
+    borough == "Manhattan") |> 
+  slice_sample(n = 500) |> 
+  leaflet() |> 
+  addProviderTiles(providers$CartoDB.Positron) |> 
+  addCircleMarkers(~long, ~lat, radius = 0.5)
 ```
 
